--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,19 +9,19 @@
   "less.validate": false,
   "scss.validate": false,
   "files.exclude": {
-    // "node_modules": true,
+    "node_modules": true,
     ".husky": true,
     ".github": true,
     ".commitlintrc.json": true,
     ".editorconfig": true,
     ".eslintcache": true,
     ".prettierignore": true,
-    // ".eslintrc.cjs": true,
+    ".eslintrc.cjs": true,
     ".jestrc.cjs": true,
     ".prettierrc.cjs": true,
-    ".lintstagedrc.cjs": true,
+    // ".lintstagedrc.cjs": true,
     "package-lock.json": true,
-    // "tsconfig.json": true,
+    "tsconfig.json": true,
     "LICENSE": true,
     "coverage": true
   }
