feat: initial commit after rebuild

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,7 @@
     ".eslintrc.cjs": true,
     ".jestrc.cjs": true,
     ".prettierrc.cjs": true,
-    // ".lintstagedrc.cjs": true,
+    ".lintstagedrc.cjs": true,
     "package-lock.json": true,
     "tsconfig.json": true,
     "LICENSE": true,
